Delete unused code Reformat code (reduce IDE warnings)